Fix landing page css issues

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -774,3 +774,33 @@
 .workflow-component-based-step-wrapper .afs-project-workflow .control-label {
     padding-left: 0px;
 }
+
+.afs-app-footer-arches-link {
+    display: inline-block;
+    float: right;
+}
+
+.afs-app-footer {
+    background:#112E4C;
+    padding: 10px 70px 30px 70px;
+    border-top: 1px solid #000;
+}
+
+.organization-address {
+    color: #f1f1f1;
+    line-height: 1.25;
+    margin-top: 10px;
+}
+
+.afs-splash-links {
+    color: #f1f1f1;
+    margin-top: 10px;
+}
+
+.afs-splash-links .splash-link-address {
+    line-height: 1.25;
+}
+
+.copyright-container {
+    padding: 20px 70px;
+}
