Rename sampling-related resources, #608

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -91,7 +91,7 @@
                                             <td 
                                                 data-bind="text: (function(){
                                                     var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
-                                                    return $data.data[partIdentifierAssignmentLabelNodeId]();
+                                                    return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [ Sample of ' + $parent.physicalThingName + ' ]';
                                                 })()"
                                             ></td>
                                         </tr>
