Format overflow table contents w/ ellipsis, #608

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -747,6 +747,13 @@
     padding-left: 0px;
 }
 
+.afs-workflow-table-contents {
+    max-width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .afs-app-footer-arches-link {
     display: inline-block;
     float: right;
