--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -94,7 +94,7 @@
                                             <td 
                                                 data-bind="text: (function(){
                                                     var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
-                                                    return $data.data[partIdentifierAssignmentLabelNodeId]();
+                                                    return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Region of ' + $parent.physicalThingName() + ']';
                                                 })()"
                                             ></td>
                                         </tr>
