Fix analysis areas element positions

--- a/afs/templates/views/components/annotation-summary.htm
+++ b/afs/templates/views/components/annotation-summary.htm
@@ -7,7 +7,7 @@
         </div>
 
         <div style="width: 100%; padding-left: 30px;">
-            <table data-bind="datatable: annotationTableConfig" class="table table-striped" style="border-bottom: 1px solid #ddd; margin-bottom: 8px; margin-left: -20px;" width="100%">
+            <table data-bind="datatable: annotationTableConfig" class="table table-striped" style="border-bottom: 1px solid #ddd; margin-left: -20px; margin-bottom: 40px !important;" width="100%">
                 <thead>
                     <tr>
                         <th>{% trans "Region Name:" %}</th>
