--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -783,3 +783,37 @@
 .copyright-container {
     padding: 20px 70px;
 }
+
+.afs-project-search-result-details-container {
+    padding: 0px;
+}
+
+.afs-project-search-result-details-container .search-result-item {
+    padding: 0px;
+    margin: 0px;
+    border: none;
+    border-bottom: 1px solid #eee;
+}
+
+.afs-project-search-result-details-container .search-result-item .summary-report-title {
+    font-size: 15px;
+    padding-left: 30px;
+    padding-top: 15px;
+}
+
+.afs-project-search-result-details-container .search-result-item .summary-report-description {
+    font-size: 13px;
+    padding-left: 30px;
+    padding-bottom: 10px;
+    color: #999;
+    margin-top: 0px;
+}
+
+.afs-project-search-result-details-container .search-result-item:hover {
+    background: #E0F0FE;
+}
+
+.afs-project-search-result-details-container .search-result-item.selected-instance {
+    background-color: #eff7f9;
+    border-bottom: 1px solid #ddd !important;
+}
