--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -339,7 +339,7 @@
                                 '
                             ></div>
                             <div>
-                                <input disabled type="text" style="padding-left: 20px; margin-left: 5px; width: 338px; height: 36px; margin-top: -5px; margin-bottom: 15px;" data-bind="textInput: sampleName"></input>
+                                <input class="afs-calculated-name" disabled type="text" style="" data-bind="textInput: sampleName"></input>
                             </div>
                         <!-- /ko -->
 
