--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -751,6 +751,10 @@
     border-bottom: 1px solid #ddd;
 }
 
+.afs-final-step-section tr.selected {
+    background: #DBF3FA !important;
+}
+
 .afs-project-workflow .new-provisional-edit-card-container .control-label {
     padding-left: 0px;
 }
