--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -86,6 +86,7 @@
                                                         }
                                                     })()
                                                 },
+                                                css: { disabled: $parent.existingParts.includes($data.tileid) }
                                             "
                                         >
                                             <td class="afs-workflow-table-contents"
