Fix context for tableConfig, #743

--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -63,7 +63,7 @@
             </div>
             <!-- /ko -->
             <div style="width: 100%px; padding-left: 30px;">
-                <table data-bind="datatable: tableConfig" class="table table-striped" style="border-bottom: 1px solid #ddd" width="100%">
+                <table data-bind="datatable: $parent.tableConfig" class="table table-striped" style="border-bottom: 1px solid #ddd" width="100%">
                     <thead>
                         <tr>
                             <th>{% trans "File Name:" %}</th>
