Show only annotation with files, #743

--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -54,7 +54,8 @@
 
     <div class="afs-final-step-section">
         <h5 class="summary-value" style="margin-bottom: -10px;">{% trans 'Files for Upload' %}</h5>
-        <!-- ko foreach: fileLists -->
+        <!-- ko foreach: {data: fileLists, as: 'fileList'} -->
+        <!-- ko if: fileList().length > 0 -->
         <h5 class="summary-value upload-dataset-name" data-bind="text: digitalResourceName || 'Unnamed Dataset (nothing to upload)'"></h5>
         <div style="display: inline-flex; margin-top: -20px">
             <!-- ko if: $parent.hasAnnotatedParts -->
@@ -87,6 +88,7 @@
                 </div>
             </div>
         </div>
+        <!-- /ko -->
         <!-- /ko -->
     </div>
 </div>
