--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
@@ -43,7 +43,7 @@
 
     <div class="afs-final-step-section">
         <!-- ko foreach: {data: objectAnnotations, as: 'annotation'} -->
-        <div data-bind="component: { name: 'views/components/annotation-summary', params: {annotation: annotation}}"></div>
+        <div style="margin: -20px 0px 60px 0px;" data-bind="component: { name: 'views/components/annotation-summary', params: {annotation: annotation}}"></div>
         <!-- /ko -->
     </div>
 </div>
