--- a/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
@@ -44,11 +44,11 @@
             }
         }"></div>
     </div>
-    <div style="padding: 5px; margin-top: -20px; margin-left: 3px;">
-        <div style="color:#2b547c; cursor: pointer; padding-left: 20px;" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide sampling activity name' : 'Show sampling activity name'"></div>
+    <div class="afs-experiment-name-block">
+        <div class="afs-experiment-name" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide experiment name' : 'Show experiment name'"></div>
         <div data-bind="visible: showName">
-            <div class="widget-input-label" style="display: none;">Sampling Activity Name</div>
-            <div style="margin: -20px -5px 20px -5px;" data-bind="component: {
+            <div class="widget-input-label">Sampling Activity Name</div>
+            <div style="margin: -10px -5px;" data-bind="component: {
                 name: 'text-widget',
                 params: {
                     renderContext: 'workflow', 
@@ -57,5 +57,5 @@
             }"></div>
         </div>
     </div>
-    <div style="height: 20px;"></div>
+    <div style="height: 50px;"></div>
 </div>
