--- a/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
@@ -40,7 +40,7 @@
                 <!-- ko foreach: {data:fileLists, as: 'fileList'} -->
                 <div style="width: 1000px; display: flex; flex-direction: column; padding: 0px 0px 15px 30px;">
                     <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
-                    <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
+                    <table data-bind="datatable: $parent.tableConfig" class="table table-striped table-bordered" width="100%">
                         <thead>
                             <tr>
                                 <th>{% trans "File Name:" %}</th>
