--- a/afs/templates/views/components/reports/scenes/documentation.htm
+++ b/afs/templates/views/components/reports/scenes/documentation.htm
@@ -17,7 +17,7 @@
         <!-- ko if: label() -->
         <div class="afs-report-subsection" >
             <div class="firstchild-container">
-                <div class="afs-report-subsection-ite pad-top">
+                <div class="afs-report-subsection-ite pad-top-sm">
                     <div class="afs-block-attributes pad-btm">
                         <h4 class="afs-block-key">Label: </h4>
                         <div class="afs-block-value" data-bind="text: label"></div>
