--- a/afs/templates/views/components/reports/scenes/substance.htm
+++ b/afs/templates/views/components/reports/scenes/substance.htm
@@ -74,7 +74,7 @@
         <!-- ko if: additionalData().length -->
         <div class="afs-report-subsection" >
             <div>
-                <div data-bind="foreach: {data: additionalData, as: 'item', noChildContext: true}" class="afs-report-subsection-ite" style="padding-top: 10px;">
+                <div data-bind="foreach: {data: additionalData, as: 'item', noChildContext: true}" class="afs-report-subsection-ite">
                     <div class="afs-block-attributes pad-btm">
                         <div class="afs-keyvalue" data-bind="component: {
                             name: 'views/components/reports/scenes/keyvalue',
