--- a/afs/templates/views/components/reports/scenes/default.htm
+++ b/afs/templates/views/components/reports/scenes/default.htm
@@ -15,7 +15,7 @@
          <!-- ko if: section.data.length -->
          <div class="afs-report-subsection" >
              <div>
-                 <div data-bind="foreach: {data: section.data, as: 'item', noChildContext: true}" class="afs-report-subsection-item" style="padding-top: 10px;">
+                 <div data-bind="foreach: {data: section.data, as: 'item', noChildContext: true}" class="afs-report-subsection-item">
                      <div class="afs-block-attributes pad-btm">
                         <div data-bind="component: {
                             name: 'views/components/reports/scenes/keyvalue',
