--- a/afs/templates/views/components/reports/scenes/existence.htm
+++ b/afs/templates/views/components/reports/scenes/existence.htm
@@ -30,7 +30,7 @@
             <!-- ko foreach: { data: eventDataArray[eventName], as: "eventData", noChildContext: true} -->
             <!-- ko if: !!eventData && eventData.tileid -->
             <div class="afs-report-subsection">
-                <h2 class="afs-report-section-subtitle">{% trans "Event Details" %}</h2>
+                <h2 class="afs-report-section-subtitle">{% trans "Event Summary" %}</h2>
                 <h3 style="display: block ;"><i data-bind="click: function() {toggleVisibility(eventData.visible)}, css: {'fa-angle-double-right': eventData.visible(), 'fa-angle-double-up': !eventData.visible()}" class="fa toggle"></i> {% trans "Event: " %} <span></span></h3>
                 <!-- <a class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit this Event" %}</a>-->
 
@@ -254,14 +254,19 @@
             
                             <!-- Show this if there is Event data (Top Card) -->
                             <div class="afs-report-collapsible-container">
-                                <div style="width:75%" data-bind="foreach: {data: $data.metadata, as: 'item' }" class="afs-report-subsection-two-column">
-                                    <div class="afs-keyvalue" data-bind="component: {
-                                        name: 'views/components/reports/scenes/keyvalue',
-                                        params: {
-                                            data: item,
-                                            inline: true
-                                        }
-                                    }"></div>
+                                <div class="afs-report-subsection-container">
+                                    <div  style="width:75%;" data-bind="foreach: {data: $data.metadata, as: 'item' }" class="afs-report-subsection-two-column">
+                                        <div afs-report-subsection-two-column>  
+                                            <div class="afs-keyvalue" data-bind="component: {
+                                                name: 'views/components/reports/scenes/keyvalue',
+                                                params: {
+                                                    data: item,
+                                                    inline: true
+                                                }
+                                            }">
+                                            </div>
+                                        </div>  
+                                    </div>
                                 </div>
                             
                                 <!-- Event First Generation Cards -->
@@ -408,7 +413,7 @@
                                     <div class="afs-nodata-note">No timespan for this event</div>
             
                                     <!-- Show this block if there's data -->
-                                    <div class="firstchild-container">
+                                    <div class="firstchild-container pad-top-sm">
                                         <div class="afs-report-subsection-item flex">
                                             <div class="afs-block-attributes timespan">
                                                 <h6 class="afs-block-key">Beginning of the beginning: </h6>
