Update template to show computed name, #757

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -694,6 +694,15 @@
     text-overflow: ellipsis;
 }
 
+.afs-calculated-datasetname {
+    margin: 5px 0px 15px 0px;
+    padding-left: 15px;
+    height: 36px; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .afs-workflow-annotator .widget-input-label {
     display: none;
 }
